[tool.poetry]
name = "headlines"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    {include = "headlines"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
feedparser = "^6.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
